preparing to combine datasets together

--- a/requests.ipynb
+++ b/requests.ipynb
@@ -5,7 +5,7 @@
    "id": "ffb45384-9954-411d-be37-6bac9184f9b7",
    "metadata": {},
    "source": [
-    "# Citibike Project"
+    "# Citibike Project - Downloading Data"
    ]
   },
   {
