prepare to merge csvs

--- a/combining_datasets.ipynb
+++ b/combining_datasets.ipynb
@@ -2390,12 +2390,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a591e069-0e21-4049-9777-ebe63e8897f9",
+   "metadata": {},
+   "source": [
+    "## Combine all the CSVs in the first header group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "039a94c8-84d3-4529-8c97-140ef6ed08cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['202105-citibike-tripdata.csv',\n",
+       " '202203-citibike-tripdata.csv',\n",
+       " '202209-citibike-tripdata.csv',\n",
+       " '202207-citbike-tripdata.csv',\n",
+       " '202302-citibike-tripdata.csv',\n",
+       " '202201-citibike-tripdata.csv',\n",
+       " '202107-citibike-tripdata.csv',\n",
+       " '202111-citibike-tripdata.csv',\n",
+       " '202304-citibike-tripdata.csv',\n",
+       " '202211-citibike-tripdata.csv',\n",
+       " '202109-citibike-tripdata.csv',\n",
+       " '202205-citibike-tripdata.csv',\n",
+       " '202103-citibike-tripdata.csv',\n",
+       " '202206-citbike-tripdata.csv',\n",
+       " '202112-citibike-tripdata.csv',\n",
+       " '202104-citibike-tripdata.csv',\n",
+       " '202202-citibike-tripdata.csv',\n",
+       " '202303-citibike-tripdata.csv',\n",
+       " '202110-citibike-tripdata.csv',\n",
+       " '202106-citibike-tripdata.csv',\n",
+       " '202108-citibike-tripdata.csv',\n",
+       " '202204-citibike-tripdata.csv',\n",
+       " '202102-citibike-tripdata.csv']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# define header group\n",
+    "header_group1=('ride_id',\n",
+    "  'rideable_type',\n",
+    "  'started_at',\n",
+    "  'ended_at',\n",
+    "  'start_station_name',\n",
+    "  'start_station_id',\n",
+    "  'end_station_name',\n",
+    "  'end_station_id',\n",
+    "  'start_lat',\n",
+    "  'start_lng',\n",
+    "  'end_lat',\n",
+    "  'end_lng',\n",
+    "  'member_casual')\n",
+    "\n",
+    "separated_dicts[header_group1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb9b562d-4bec-44b7-aa91-f12836763968",
+   "id": "4a7630d6-af7f-40a1-9064-bcade449630c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for csv in separated_dicts[header_group1]:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a89f4cfd-7160-4421-a84e-f7d3505b4937",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Directory containing the CSV files\n",
+    "directory = '/path/to/csv/files/'\n",
+    "\n",
+    "# Get the list of CSV files in the directory\n",
+    "csv_files = [file for file in os.listdir(directory) if file.endswith('.csv')]\n",
+    "\n",
+    "# Initialize an empty DataFrame for combined data\n",
+    "combined_data = pd.DataFrame()\n",
+    "\n",
+    "# Iterate over each CSV file\n",
+    "for index, csv_file in enumerate(csv_files):\n",
+    "    file_path = os.path.join(directory, csv_file)\n",
+    "    \n",
+    "    # Read CSV file\n",
+    "    df = pd.read_csv(file_path)\n",
+    "    \n",
+    "    # Append data to combined DataFrame\n",
+    "    if index == 0:\n",
+    "        # Include header only for the first CSV\n",
+    "        combined_data = combined_data.append(df)\n",
+    "    else:\n",
+    "        # Skip header for other CSVs\n",
+    "        combined_data = combined_data.append(df[1:], ignore_index=True)\n",
+    "\n",
+    "# Save the combined data to a new CSV file\n",
+    "combined_data.to_csv('/path/to/combined_file.csv', index=False)\n"
+   ]
   },
   {
    "cell_type": "markdown",
