--- a/03_normalizing_datasets.ipynb
+++ b/03_normalizing_datasets.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "id": "42028afd-5ca5-4fc5-b8a9-ffad33886e2e",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "id": "91eef3b0-cba0-4f0d-973f-89e9cff3d7b3",
    "metadata": {},
    "outputs": [],
@@ -57,6 +57,60 @@
     "group1_location='/Users/sra/files/projects/citibike_project/combined/group1_combined/group1.csv'\n",
     "group2_location='/Users/sra/files/projects/citibike_project/combined/group2_combined/group2.csv'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "255d9d23-fbe4-4316-831f-de91ad549e17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/n3/q8wb235x57n_sx2q14dsngjr0000gn/T/ipykernel_1313/3281893334.py:1: DtypeWarning: Columns (5,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  group1_pd=pd.read_csv(group1_location)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 55800085 entries, 0 to 55800084\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column              Dtype  \n",
+      "---  ------              -----  \n",
+      " 0   ride_id             object \n",
+      " 1   rideable_type       object \n",
+      " 2   started_at          object \n",
+      " 3   ended_at            object \n",
+      " 4   start_station_name  object \n",
+      " 5   start_station_id    object \n",
+      " 6   end_station_name    object \n",
+      " 7   end_station_id      object \n",
+      " 8   start_lat           float64\n",
+      " 9   start_lng           float64\n",
+      " 10  end_lat             float64\n",
+      " 11  end_lng             float64\n",
+      " 12  member_casual       object \n",
+      "dtypes: float64(4), object(9)\n",
+      "memory usage: 5.4+ GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "group1_pd=pd.read_csv(group1_location)\n",
+    "group1_pd.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffcba28b-d822-46a5-948b-ebde30a8765a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
