--- a/04_creating_sql_database.ipynb
+++ b/04_creating_sql_database.ipynb
@@ -18,28 +18,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "98cb4653-ccf2-45b0-b6b7-4ebb1512bf98",
+   "execution_count": 14,
+   "id": "c1588d63-354f-4439-8451-abc3cf324c27",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import mysql.connector\n",
     "\n",
-    "# Create a DataFrame (replace with your actual DataFrame)\n",
-    "df = pd.DataFrame({'Name': ['Alice', 'Bob', 'Charlie'],\n",
-    "                   'Age': [25, 30, 35],\n",
-    "                   'City': ['New York', 'London', 'Paris']})\n",
+    "import mysql.connector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "731631e2-bb8e-4ddc-8b90-200888393882",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the Parquet file into a Pandas DataFrame\n",
+    "path_to_ride_pq='/Users/sra/files/projects/citibike_project/combined/group1_combined/group1_pl_ridenorm.parquet'\n",
+    "ride_pd=pd.read_parquet(path_to_ride_pq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "78968a5f-b330-46c3-820d-0975e51afa00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Establish a connection to the MySQL server\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='rootroot'\n",
+    ")\n",
     "\n",
+    "# Create a cursor object to execute SQL queries\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Create a new database, 'citibike_project'\n",
+    "create_db_query = 'CREATE DATABASE citibike_project'\n",
+    "cursor.execute(create_db_query)\n",
+    "\n",
+    "# Commit the changes and close the connection\n",
+    "conn.commit()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03e5f9b2-8dc9-45e8-b118-2dbfe69d08af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Establish a connection to the MySQL database\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='rootroot',\n",
+    "    database='citibike_project'\n",
+    ")\n",
+    "\n",
+    "# Create a cursor object to execute SQL queries\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Create the table in the MySQL database with the desired schema\n",
+    "create_table_query = '''\n",
+    "    CREATE TABLE IF NOT EXISTS rides (\n",
+    "        ride_id VARCHAR,\n",
+    "        rideable DATATYPE,\n",
+    "        ...\n",
+    "    )\n",
+    "'''\n",
+    "cursor.execute(create_table_query)\n",
+    "\n",
+    "# Insert the data from the DataFrame into the MySQL table\n",
+    "df.to_sql('table_name', conn, if_exists='replace', index=False)\n",
+    "\n",
+    "# Commit the changes and close the connection\n",
+    "conn.commit()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a23529d7-f7c6-485f-bbcd-cccad7714076",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "1049 (42000): Unknown database 'citibike_project'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMySQLInterfaceError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[0;32m/Applications/Anaconda/anaconda3/envs/mysql/lib/python3.8/site-packages/mysql/connector/connection_cext.py:200\u001b[0m, in \u001b[0;36mCMySQLConnection._open_connection\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    199\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 200\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_cmysql\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mcnx_kwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    201\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m MySQLInterfaceError \u001b[38;5;28;01mas\u001b[39;00m exc:\n",
+      "\u001b[0;31mMySQLInterfaceError\u001b[0m: Unknown database 'citibike_project'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m table \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrides\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Establish a connection to the MySQL server\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m cnx \u001b[38;5;241m=\u001b[39m \u001b[43mmysql\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhost\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mhost\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muser\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43muser\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpassword\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdatabase\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdatabase\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/Applications/Anaconda/anaconda3/envs/mysql/lib/python3.8/site-packages/mysql/connector/__init__.py:176\u001b[0m, in \u001b[0;36mconnect\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    172\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMySQL Connector/Python C Extension not \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    173\u001b[0m                           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mavailable\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    175\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m HAVE_CEXT \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m use_pure:\n\u001b[0;32m--> 176\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mCMySQLConnection\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    177\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m MySQLConnection(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[0;32m/Applications/Anaconda/anaconda3/envs/mysql/lib/python3.8/site-packages/mysql/connector/connection_cext.py:80\u001b[0m, in \u001b[0;36mCMySQLConnection.__init__\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[38;5;28msuper\u001b[39m(CMySQLConnection, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m kwargs:\n\u001b[0;32m---> 80\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/Applications/Anaconda/anaconda3/envs/mysql/lib/python3.8/site-packages/mysql/connector/abstracts.py:781\u001b[0m, in \u001b[0;36mMySQLConnectionAbstract.connect\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    778\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m    780\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdisconnect()\n\u001b[0;32m--> 781\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_open_connection\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    782\u001b[0m \u001b[38;5;66;03m# Server does not allow to run any other statement different from ALTER \u001b[39;00m\n\u001b[1;32m    783\u001b[0m \u001b[38;5;66;03m# when user's password has been expired.\u001b[39;00m\n\u001b[1;32m    784\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_client_flags \u001b[38;5;241m&\u001b[39m ClientFlag\u001b[38;5;241m.\u001b[39mCAN_HANDLE_EXPIRED_PASSWORDS:\n",
+      "File \u001b[0;32m/Applications/Anaconda/anaconda3/envs/mysql/lib/python3.8/site-packages/mysql/connector/connection_cext.py:202\u001b[0m, in \u001b[0;36mCMySQLConnection._open_connection\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    200\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_cmysql\u001b[38;5;241m.\u001b[39mconnect(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcnx_kwargs)\n\u001b[1;32m    201\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m MySQLInterfaceError \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[0;32m--> 202\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m errors\u001b[38;5;241m.\u001b[39mget_mysql_exception(msg\u001b[38;5;241m=\u001b[39mexc\u001b[38;5;241m.\u001b[39mmsg, errno\u001b[38;5;241m=\u001b[39mexc\u001b[38;5;241m.\u001b[39merrno,\n\u001b[1;32m    203\u001b[0m                                      sqlstate\u001b[38;5;241m=\u001b[39mexc\u001b[38;5;241m.\u001b[39msqlstate)\n\u001b[1;32m    204\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_do_handshake()\n",
+      "\u001b[0;31mProgrammingError\u001b[0m: 1049 (42000): Unknown database 'citibike_project'"
+     ]
+    }
+   ],
+   "source": [
     "# MySQL connection details\n",
     "host = 'localhost'\n",
-    "user = 'your_username'\n",
-    "password = 'your_password'\n",
-    "database = 'your_database_name'\n",
-    "table = 'your_table_name'\n",
+    "user = 'root'\n",
+    "password = 'rootroot'\n",
+    "database = 'citibike_project'\n",
+    "table = 'rides'\n",
     "\n",
     "# Establish a connection to the MySQL server\n",
-    "cnx = mysql.connector.connect(host=host, user=user, password=password, database=database)\n",
+    "cnx = mysql.connector.connect(host=host, user=user, password=password, database=database)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4493f11a-2624-4007-9976-18fa45ea9bc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Create a cursor object to execute SQL queries\n",
     "cursor = cnx.cursor()\n",
@@ -59,15 +166,15 @@
     "cursor.close()\n",
     "cnx.close()\n",
     "\n",
-    "print(f\"Data has been inserted into table '{table}' in database '{database}'.\")\n"
+    "print(f\"Data has been inserted into table '{table}' in database '{database}'.\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mysql",
    "language": "python",
-   "name": "python3"
+   "name": "mysql"
   },
   "language_info": {
    "codemirror_mode": {
@@ -79,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
