--- a/04_creating_sql_database.ipynb
+++ b/04_creating_sql_database.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "c1dc28b2-c577-4166-b781-34719797fdd6",
    "metadata": {},
    "outputs": [],
@@ -396,8 +396,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9849e8a-b48a-4633-a986-6e229e2702d6",
+   "metadata": {},
+   "source": [
+    "The kernel kept crashing when running the code, getting caught on the step, \"writing the DataFrame to a MySQL table using SQLAlchemy\". Because of this, I will import the data manually and not use the code below."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "aa080eab-ecba-4ead-8ae5-72923c0f7a90",
    "metadata": {},
    "outputs": [
@@ -405,51 +413,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "read parquet table\n",
-      "parquet table is now in pandas\n",
-      "engine is created\n"
+      "start_this_code=False. The code was not run.\n"
      ]
     }
    ],
    "source": [
-    "table_name='rides'\n",
-    "your_host='localhost'\n",
-    "your_username='root'\n",
-    "your_password='rootroot'\n",
-    "your_database='citibike_project'\n",
+    "start_this_code=False\n",
     "\n",
-    "flow_control=f'/Users/sra/files/projects/citibike_project/combined/group1_combined/flow_control/{table_name}_made'\n",
-    "flag=False\n",
+    "if start_this_code:\n",
     "\n",
-    "if not os.path.exists(flow_control):\n",
-    "    os.mkdir(flow_control)\n",
-    "    flag=True\n",
+    "    table_name='rides'\n",
+    "    your_host='localhost'\n",
+    "    your_username='root'\n",
+    "    your_password='rootroot'\n",
+    "    your_database='citibike_project'\n",
     "\n",
-    "if flag:\n",
-    "    \n",
-    "    # load the Parquet data into a pandas DataFrame\n",
-    "    parquet_file = '/Users/sra/files/projects/citibike_project/combined/group1_combined/group1_pl_ridenorm.parquet'\n",
-    "    parquet_table = pq.read_table(parquet_file)\n",
-    "    print('read parquet table')\n",
-    "    \n",
-    "    df = parquet_table.to_pandas()\n",
-    "    print('parquet table is now in pandas')\n",
+    "    flow_control=f'/Users/sra/files/projects/citibike_project/combined/group1_combined/flow_control/{table_name}_made'\n",
+    "    flag=False\n",
     "\n",
-    "    # connect to the MySQL database using SQLAlchemy engine\n",
-    "    engine = create_engine(f'mysql+mysqlconnector://{your_username}:{your_password}@{your_host}/{your_database}')\n",
-    "    print('engine is created')\n",
+    "    if not os.path.exists(flow_control):\n",
+    "        os.mkdir(flow_control)\n",
+    "        flag=True\n",
+    "\n",
+    "    if flag:\n",
+    "\n",
+    "        # load the Parquet data into a pandas DataFrame\n",
+    "        parquet_file = '/Users/sra/files/projects/citibike_project/combined/group1_combined/group1_pl_ridenorm.parquet'\n",
+    "        parquet_table = pq.read_table(parquet_file)\n",
+    "        print('read parquet table')\n",
+    "\n",
+    "        df = parquet_table.to_pandas()\n",
+    "        print('parquet table is now in pandas')\n",
+    "\n",
+    "        # connect to the MySQL database using SQLAlchemy engine\n",
+    "        engine = create_engine(f'mysql+mysqlconnector://{your_username}:{your_password}@{your_host}/{your_database}')\n",
+    "        print('engine is created')\n",
+    "\n",
+    "        # write the DataFrame to a MySQL table using SQLAlchemy\n",
+    "        df.to_sql(name=table_name, con=engine, if_exists='replace', index=False)\n",
+    "        print('written table to MySQL')\n",
+    "\n",
+    "        print(\"Created table '{table_name}' successfully.\")\n",
+    "        \n",
+    "else:\n",
     "    \n",
-    "    # write the DataFrame to a MySQL table using SQLAlchemy\n",
-    "    df.to_sql(name=table_name, con=engine, if_exists='replace', index=False)\n",
-    "    print('written table to MySQL')\n",
-    "    \n",
-    "    print(\"Created table '{table_name}' successfully.\")"
+    "    print(f'start_this_code={start_this_code}. The code was not run.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcde37bf-a8f9-4d6f-b84b-9371cbff4826",
+   "metadata": {},
+   "source": [
+    "Save the `.parquet` files as `.CSV` to upload them to MySQLWorkbench:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ab340ae2-27f8-4e69-97ff-725eba55454c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ridenorm: parquet table to pandas done\n",
+      "ridenorm: pandas table to csv done\n",
+      "stationnorm: parquet table to pandas done\n",
+      "stationnorm: pandas table to csv done\n"
+     ]
+    }
+   ],
+   "source": [
+    "# group1_ridenorm\n",
+    "\n",
+    "parquet_file = '/Users/sra/files/projects/citibike_project/combined/group1_combined/group1_pl_ridenorm.parquet'\n",
+    "parquet_table = pq.read_table(parquet_file)\n",
+    "df = parquet_table.to_pandas()\n",
+    "print('ridenorm: parquet table to pandas done')\n",
+    "\n",
+    "csv_file = '/Users/sra/files/projects/citibike_project/combined/group1_combined/group1_pl_ridenorm.csv'\n",
+    "df.to_csv(csv_file, index=False)\n",
+    "print('ridenorm: pandas table to csv done')\n",
+    "\n",
+    "# # #\n",
+    "\n",
+    "# group1_stationnorm\n",
+    "\n",
+    "parquet_file = '/Users/sra/files/projects/citibike_project/combined/group1_combined/group1_pl_stationnorm.parquet'\n",
+    "parquet_table = pq.read_table(parquet_file)\n",
+    "df = parquet_table.to_pandas()\n",
+    "print('stationnorm: parquet table to pandas done')\n",
+    "\n",
+    "csv_file = '/Users/sra/files/projects/citibike_project/combined/group1_combined/group1_pl_stationnorm.csv'\n",
+    "df.to_csv(csv_file, index=False)\n",
+    "print('stationnorm: pandas table to csv done')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4493f11a-2624-4007-9976-18fa45ea9bc2",
+   "id": "f9ac06bd-b130-40a9-b035-565ec358e884",
    "metadata": {},
    "outputs": [],
    "source": []
