--- a/02_combining_datasets.ipynb
+++ b/02_combining_datasets.ipynb
@@ -2204,7 +2204,9 @@
   {
    "cell_type": "markdown",
    "id": "eb410b7e-6be0-4a1f-8cbe-34cfa2255caa",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Group 1"
    ]
